--- a/assets/css/description.css
+++ b/assets/css/description.css
@@ -20,17 +20,19 @@
 }
 
 .container-modal.active{
-    display: block;
+    display: flex;
+    justify-content: center;
 }
 
 .descontain{
-    position: absolute;
     background-color: var(--white-color);
     padding: 32px;
     border-radius: 10px;
     top: calc(var(--header-height) - 90px);
     left: 10%;
     animation: modalFadeIn ease-in 0.2s;
+    overflow-y: scroll;
+    max-height: 100%;
 }
 
 .description{
@@ -43,6 +45,7 @@
 
 
 .description-main{
+    position: relative;
     display: flex;
 }
 
@@ -65,17 +68,17 @@
 .description-product{
     font-size: 1.6rem;
     line-height: 20px;
+    max-height: 400px;
+    overflow-y: scroll;
+    width: 100%;
+    word-wrap: break-word;
 }
 
 
 .descripton-main-item:not(:last-child){
-    margin-right: 32px;
+    margin-right: 0px;
 }
 
-.description-product, .description-title{
-    width: 100%;
-    word-wrap: break-word;
-}
 
 .descripton-main-item:not(:first-child):hover{
     transform: scale(1.01);
@@ -83,12 +86,6 @@
 }
 
 /* btn buy */
-
-.buy-product{
-    position: absolute;
-    bottom: 8%;
-    right: 12%;
-}
 
 /* silder */
 
@@ -168,13 +165,12 @@
 /* share */
 
 .share{
-    position: absolute;
     text-align: center;
     z-index: 1000;
     top: 0;
     font-size: 2rem;
     display: flex;
-    margin-top: 65%;
+    margin-top: 20%;
     width: 100%;
     justify-content: space-between;
 }
@@ -246,10 +242,14 @@
 /* product-btn */
 
 .buy-product{
+    width: 50%;
     display: flex;
     justify-content: center;
     font-size: 1.6rem;
     padding: 20px;
+    position: absolute;
+    bottom: 5%;
+    right: 0;
 }
 
 .add-cart{
@@ -277,12 +277,11 @@
 
 /* close */
 .close{
-    position: absolute;
-    z-index: 1000;
     text-align: center;
-    bottom: 14%;
+    z-index: 1000;
     font-size: 2rem;
     width: 100%;
+    margin-top: 38px;
 }
 
 .close span{
@@ -298,6 +297,7 @@
 .close span:hover{
     background-color: #ed5c3f;
 }
+
 
 @keyframes modalFadeIn {
     from{
